[project]
name = "pebble"
version = "0.1.0"
description = "Minimalist habit tracker built using Clean Architecture."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
]

# tell uv where the source code is
[tool.pytest.ini_options]
pythonpath = ["./src"]
