[project]
name = "pebble"
version = "0.7.0"
description = "Minimalist habit tracker built with Clean Architecture."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "pymongo>=4.11.3",
]

[dependency-groups]
dev = [
    "mongomock>=4.3.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.2",
]

# tell uv where the source code is
[tool.pytest.ini_options]
pythonpath = ["./src"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = [
    "E501", # line too long
    "ANN", # flake8 type check
    "N", # pep8 naming convention
    "R", # pylint refactor rules
    "I", # isort
]
ignore = []
